plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'io.github.sms1875'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

  // 스크래핑
  implementation 'org.seleniumhq.selenium:selenium-java:4.23.0' 
  implementation 'io.github.bonigarcia:webdrivermanager:5.9.1'
  implementation 'org.jsoup:jsoup:1.15.3'

  // 파이어베이스 연결
  implementation 'com.google.firebase:firebase-admin:9.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
